<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DashboardFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="95dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/ehealthwatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <androidx.cardview.widget.CardView
        android:layout_width="383dp"
        android:layout_height="205dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="381dp"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/welcomeUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="65dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="63dp"
                android:layout_marginRight="63dp"
                android:layout_marginBottom="57dp"
                android:gravity="center_horizontal"
                android:text="Welcome to Health E-Watch App"
                android:textAlignment="center"
                android:textSize="20sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/reportCase"
        android:textAllCaps="false"
        android:layout_width="121dp"
        android:layout_height="118dp"
        android:layout_gravity="bottom"
        android:background="@color/BgButtonReport"
        android:text="@string/report_case"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:id="@+id/setReminder"
        android:textAllCaps="false"
        android:layout_width="121dp"
        android:layout_height="118dp"
        android:layout_gravity="bottom"
        android:background="@color/BgButtonReminder"
        android:text="@string/set_reminders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:layout_width="237dp"
        android:layout_height="44dp"
        android:layout_gravity="bottom"
        android:background="@color/BgButtonRequestAccount"
        android:text="@string/analytics_and_reports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

</androidx.constraintlayout.widget.ConstraintLayout>