<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".dashboard.Reporting">


    <TextView
        android:id="@+id/tvReporting"
        android:layout_width="385dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/send_the_following_information_about_the_case_to_kenya_red_cross_health_management_system_you_can_collect_the_information_via_text_in_the_fields_below"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <Spinner
        android:id="@+id/spCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReporting"
        android:layout_marginTop="38dp"
        android:entries="@array/Conditions"
        android:padding="15dp" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReporting"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_toEndOf="@+id/spCondition"
        android:layout_toRightOf="@+id/spCondition"
        android:entries="@array/Location"
        android:padding="15dp" />

    <EditText
        android:id="@+id/edReport"
        android:layout_width="321dp"
        android:layout_height="143dp"
        android:layout_below="@+id/tvReporting"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="41dp"
        android:hint="@string/write_your_report_here"
        android:padding="15dp"
        android:autofillHints="" />


    <Button
        android:id="@+id/btn_sendReport"
        android:layout_width="171dp"
        android:background="@color/BgButtonReminder"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edReport"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:text="@string/report_case" />

</RelativeLayout>